# study_ai_agent

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  debug-executor-node-panic.md  debug-model-tool-args-invalid.md  docker-compose.yml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
crm_mcp/: .gitignore  Makefile  justfile  pyproject.toml
crm_mcp/data/: crm_seed.json  crm_store.json
crm_mcp/src/crm_mcp/: __init__.py  __main__.py  config.py  enums.py  errors.py  formatters.py  logging_setup.py  models.py  server.py  store.py
crm_mcp/src/crm_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crm_mcp/src/crm_mcp/tools/: __init__.py  _common.py  activities.py  contacts.py  customers.py  leads.py  opportunities.py
crm_mcp/tests/: call_req.json  inspector_chain.py  smoke.py
crm_mcp/tests/http/: crm_mcp.http
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
docs/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCKER.md  QUICKSTART.md
study_ai_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  justfile  main.py  pyproject.toml  requirements.txt
study_ai_agent/cli/: __init__.py  commands.py
study_ai_agent/config/: pii_keywords.json
study_ai_agent/scripts/: build.py
study_ai_agent/src/: __init__.py  __main__.py
study_ai_agent/src/config/: __init__.py  settings.py
study_ai_agent/src/core/: __init__.py  checkpointer.py  config.py  errors.py  events.py  graph.py  logging_handler.py  message_utils.py  model_factory.py  nodes.py  pii_config.py  pii_log_filter.py  schemas.py  server.py  skill.py  sse_heartbeat.py  state.py
study_ai_agent/src/core/middleware/: __init__.py  context_middleware.py  error_middleware.py  human_in_loop_middleware.py  logging_middleware.py  persistence_middleware.py  rate_limit.py  request_id.py  routing_middleware.py  security_middleware.py  testing_middleware.py  transformation_middleware.py  validation_middleware.py
study_ai_agent/src/core/strategies/: __init__.py  base.py  p_e_r_a.py  react.py  reflection.py
study_ai_agent/src/core/tools/: __init__.py  communication_tools.py  computation_tools.py  database_tools.py  file_tools.py  info_tools.py  integration_tools.py  knowledge_tools.py  proxy.py  safe_tool.py  safety_tools.py  search_tools.py  utility_tools.py
study_ai_agent/src/logging/: __init__.py  setup.py
study_ai_agent/src/providers/: __init__.py  base.py  deepseek.py  qianfan.py  qwen.py  zhipuai.py
study_ai_agent/src/skills/: __init__.py  base_skill.py  coding.py  qa.py  research.py
study_ai_agent/tests/: README.md  conftest.py
study_ai_agent/tests/http/: chat.http
study_ai_agent/tests/integration/: test_e2e_pii.py
study_ai_agent/tests/llm/: __init__.py  test_zhipuai.py
study_ai_agent/tests/manual/: _all_zh.py  _char_diff.py  _custom_zh.py  _diag.py  _domain_diff.py  _live_pii.py  _patch_cfg.py  _patch_ref.py  _pii_fix.py  _pii_hook.py  _pii_real.py  _pii_skill.py  _pii_user_repro.py  _rewrite_cfg.py  _verify_fix.py  _verify_mw.py  diag_connectivity.py  dump_model_selection.py  smoke_ddg_inspect.py  smoke_ddg_schema.py  smoke_dsn.py  smoke_dsn2.py  smoke_e2e_ddg.py  smoke_mcp_integration.py  smoke_mcp_reload_endpoint.py  smoke_phase3_api_health.py  smoke_phase4_runtime.py  smoke_phase5_pii.py  smoke_pool_defenses.py  smoke_pool_with_pg.py  smoke_safe_tool.py  smoke_skeletons.py  smoke_strategies.py  smoke_strategy_validation.py  smoke_zombie_kill.py  test_agui.py  test_e2e_chat.py  test_pii_chinese_adjacent.py  test_pii_e2e.py  test_pii_middleware.py  (+5 more)
study_ai_agent_ui/: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite-env.d.ts  vite.config.ts  vite.out
study_ai_agent_ui/src/: index.css
study_ai_agent_ui/src/app/: App.tsx  main.tsx  providers.tsx
study_ai_agent_ui/src/components/: index.ts
study_ai_agent_ui/src/config/: env.ts  index.ts
study_ai_agent_ui/src/context/: AguiStateContext.tsx  ConfigContext.tsx  SessionContext.tsx  SkillContext.tsx  index.ts  sessionContextObject.ts  (+1 more)
tests/e2e/: test_integration.py
(+47 files in other folders)
